contact page and about me pages edited to sort hr line overlapping bug

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: darkGrey;
+  background-color: hsl(0, 0%, 71%);
 }
 
 
@@ -24,7 +24,7 @@ body {
 
 .navbar-item {
   color: white;
-  border-radius:10px;
+  border-radius:15px;
   padding: 5px 20px;
   // font-size: 20px;
 }
